feat: add mypy and pre-commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,12 @@ build-backend = "poetry.core.masonry.api"
 dev = "scripts.dev:run"
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.15.0"
+pre-commit = "^4.2.0"
 
 [tool.mypy]
-python_version = ">=3.10"
+python_version = "3.10"
 strict = true
 exclude = "(venv|env|\\.venv|tests/.*_test\\.py)"
 check_untyped_defs = true
 ignore_missing_imports = true
+plugins = ["pydantic.mypy"]
