FEAT: Add environment settings handling with Pydantic integration, partial database integration and docker compose creation
Introduced a new `Settings` class using Pydantic for managing environment variables, with `.env` file support. Additionally, updated dependencies to include `pydantic-settings`, `greenlet`, and `sqlalchemy` for enhanced configuration and database support.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,8 @@ repos:
       - id: mypy
         additional_dependencies:
           - pydantic
+          - sqlmodel
+          - pydantic-settings
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.3.5
