--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
           - pydantic
           - sqlmodel
           - pydantic-settings
+          - pyjwt
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.3.5
