--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "fastapi[standard] (>=0.115.12,<0.116.0)",
     "sqlmodel (>=0.0.24,<0.0.25)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
-    "dependency-injector (>=4.47.1,<5.0.0)"
+    "dependency-injector (>=4.47.1,<5.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)"
 ]
 
 
