FEAT: add create user integration test

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
           - sqlmodel
           - pydantic-settings
           - pyjwt
+          - pytest
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.3.5
