--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "sqlmodel (>=0.0.24,<0.0.25)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "dependency-injector (>=4.47.1,<5.0.0)",
-    "pyjwt (>=2.10.1,<3.0.0)"
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "pytest (>=8.4.0,<9.0.0)"
 ]
 
 
