--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "dependency-injector (>=4.47.1,<5.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
-    "pytest (>=8.4.0,<9.0.0)"
+    "pytest (>=8.4.0,<9.0.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "pytest-asyncio (>=1.0.0,<2.0.0)"
 ]
 
 
