--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "pytest (>=8.4.0,<9.0.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
     "pytest-asyncio (>=1.0.0,<2.0.0)",
-    "blprint (>=0.1.6,<0.2.0)"
+    "blprint (>=0.1.6,<0.2.0)",
+    "stripe (>=13.1.0,<14.0.0)"
 ]
 
 
