feat: add subscription management endpoints and Stripe webhook integration

--- a/blueprints/feature/{{name}}_dto.py.template
+++ b/blueprints/feature/{{name}}_dto.py.template
@@ -1,4 +1,4 @@
-from src.fast_api_template.modules.shared.base_dto import BaseDTO
+from fast_api_template.modules.shared.base_dto import BaseDTO
 
 
 class {{name__pascal_case}}DTO(BaseDTO):
