--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,7 @@ dependencies = [
     "pytest (>=8.4.0,<9.0.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
     "pytest-asyncio (>=1.0.0,<2.0.0)",
-    "blprint (>=0.1.6,<0.2.0)",
-    "stripe (>=13.1.0,<14.0.0)"
+    "stripe (>=13.1.0,<14.0.0)",
 ]
 
 
@@ -27,6 +26,10 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 dev = "scripts.dev:run"
+create_tables = "scripts.create_tables:run"
+create_subscription_plan = "scripts.create_subscription_plan:app"
+
+
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.15.0"
 pre-commit = "^4.2.0"
