fix: import env on postgres config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pytest-asyncio (>=1.0.0,<2.0.0)",
     "stripe (>=13.1.0,<14.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
 ]
 
 
